--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -27,6 +27,9 @@
 
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
+    <!-- SDK MercadoPago.js V2 -->
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <link type="text/javascript" href="/ClientApp/src/assets/js/mercadopagosdk.js" />
 
 </head>
 
