--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -25,11 +25,20 @@
     <!-- Font Awesome Icon -->
     <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 
+    <!--JQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
+
     <!-- SDK MercadoPago.js V2 -->
     <script src="https://sdk.mercadopago.com/js/v2"></script>
-    <link type="text/javascript" href="/ClientApp/src/assets/js/mercadopagosdk.js" />
+    <!--<link type="text/javascript" href="/ClientApp/src/assets/js/mercadopagosdk.js" />-->
+
+    <!-- Google Auth -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
 
 </head>
 
