arregle carrito desde cards

--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -37,6 +37,7 @@
 
     <!-- Google Auth -->
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+    <base href="/">
 
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
